fix: create users each time for the tests